Updated relevant courses - Research Interests and Certificates

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-book-open"></i></span>Relevant Courses</h2>
 <ul>
 
+    <li class="job-title">Foundations of Computer Vision : 19.75/20</li>
                             <li class="job-title">Principles of Database Design : 19.5/20</li>
                              <li class="job-title">Internet Engineering : 20/20</li>
                              <li class="job-title">The Theory of Formal Languages and Automata : 18.75/20</li>
@@ -190,21 +191,21 @@
               </div><!--//item-->
 
 <!--</ul>-->
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">Complete Responsive Web Development Certificate</h3>
-                          <div class="time">Apr.2020</div>
+<!--              <div class="item">-->
+<!--                  <div class="meta">-->
+<!--                      <div class="upper-row">-->
+<!--                          <h3 class="job-title">Complete Responsive Web Development Certificate</h3>-->
+<!--                          <div class="time">Apr.2020</div>-->
 
-                      </div><!--//upper-row-->
+<!--                      </div>&lt;!&ndash;//upper-row&ndash;&gt;-->
 
-                      <div class="company">
-                          <a href="https://www.udemy.com/course/responsive-web-development/">Udemy</a>
-                          <ul><li>Completed 6 total hours of courses on html, css, bootstrap, JQuery</li>
-                              <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>
+<!--                      <div class="company">-->
+<!--                          <a href="https://www.udemy.com/course/responsive-web-development/">Udemy</a>-->
+<!--                          <ul><li>Completed 6 total hours of courses on html, css, bootstrap, JQuery</li>-->
+<!--                              <li><a href="https://www.udemy.com/certificate/UC-5dd0b2bc-b36a-4db4-a755-e520cd13725d/" target="_blank">View Certificate</a></li></ul>-->
 
-                  </div></div><!--//meta-->
-              </div><!--//item-->
+<!--                  </div></div>&lt;!&ndash;//meta&ndash;&gt;-->
+<!--              </div>&lt;!&ndash;//item&ndash;&gt;-->
 
 <!--              <div class="company"><span class="text-info">Creative Online School</span>-->
 <!--                          <a href="https://www.udemy.com/">Complete Responsive Web Development Certificate, Udemy</a></span></li></ul>-->
@@ -213,17 +214,17 @@
 
 
 
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">Requirement for the Android Pack Certificate</h3>
-                          <div class="time">Apr.2017</div>
-                      </div><!--//upper-row-->
+<!--              <div class="item">-->
+<!--                  <div class="meta">-->
+<!--                      <div class="upper-row">-->
+<!--                          <h3 class="job-title">Requirement for the Android Pack Certificate</h3>-->
+<!--                          <div class="time">Apr.2017</div>-->
+<!--                      </div>&lt;!&ndash;//upper-row&ndash;&gt;-->
 
-                      <div class="company"><span class="text-info">Tehran Institute of Technology</span>
-                          <ul><li>Completed 70 total hours of Developing Android App in java language </li><li><a href="https://github.com/asal97/CV/blob/master/assets/images/AndroidPack.jpg">View Certificate</a></li></ul>
-                  </div></div><!--//meta-->
-              </div>
+<!--                      <div class="company"><span class="text-info">Tehran Institute of Technology</span>-->
+<!--                          <ul><li>Completed 70 total hours of Developing Android App in java language </li><li><a href="https://github.com/asal97/CV/blob/master/assets/images/AndroidPack.jpg">View Certificate</a></li></ul>-->
+<!--                  </div></div>&lt;!&ndash;//meta&ndash;&gt;-->
+<!--              </div>-->
 
               <div class="item">
                   <div class="meta">
@@ -257,11 +258,10 @@
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Research Interests</h2>
 <ul>
-               <li class="job-title">Intelligent Software Systems</li>
+                 <li class="job-title">Intelligent Software Systems</li>
+                <li class="job-title">Computer Vision and Pattern Recognition</li>
                 <li class="job-title">Cognitive Science</li>
                 <li class="job-title">Information and Database Systems</li>
-                <li class="job-title">Computer Vision and Pattern Recognition</li>
-                <li class="job-title">Linguistics and Computational Linguistics</li>
                 <li class="job-title">Machine learning</li>
                 <li class="job-title">Human-Computer Interaction</li>
 
