--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">B.Sc in Computer Engineering</h3>
-                          <div class="time">Sep.2016 - Aug.2020(Expected)</div>
+                          <div class="time">Sep.2016 - Sep.2020</div>
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
-<ul><li class="text-info"><strong>GPA :16.62/20 </strong>(Preliminary)</li></ul>
+<ul><li class="text-info"><strong>CGPA :16.69/20 </strong>(Preliminary)</li></ul>
 <h3 class="job-title">Bachelors Thesis Project</h3>
 <div class="company"><a class="text-info" ><strong> ALPR Plate Recognition and Supervision Website</strong></a>
                 <br>
