last year gpa added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
-<ul><li class="text-info"><strong>CGPA :16.69/20 </strong></li></ul>
+<ul><li class="text-info"><strong>CGPA :16.69/20 </strong></li> <li class="text-info"><strong>Last Year GPA :17.24/20 </strong></li> </ul>
 <h3 class="job-title">Bachelors Thesis Project</h3>
 <div class="company"><a class="text-info" ><strong> ALPR Plate Recognition and Supervision Website</strong></a>
                 <br>
