Coursera Certificate added

--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
 <!--              <h3 class="job-title"><strong>Artificial Intelligence and Machine Learning</strong></h3>-->
 <!--              <br>-->
 <!--              <ul>-->
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Neural Networks and Deep Learning</h3>
+                          <div class="time">Oct.2020</div>
+
+                      </div><!--//upper-row-->
+
+                      <div class="company">
+                          <a href="https://www.coursera.org/">Coursera</a>
+                          <ul>
+                              <li><a href="https://www.coursera.org/account/accomplishments/verify/MA46A74VWGU8" target="_blank">View Certificate</a></li></ul>
+
+                  </div></div><!--//meta-->
+              </div>
+
                   <div class="item">
                   <div class="meta">
                       <div class="upper-row">
@@ -261,7 +277,7 @@
                 <li class="job-title">Computer Vision and Pattern Recognition</li>
                 <li class="job-title">Cognitive Science</li>
                 <li class="job-title">Information and Database Systems</li>
-                <li class="job-title">Machine learning</li>
+                <li class="job-title">Deep Learning</li>
                 <li class="job-title">Human-Computer Interaction</li>
 
 
@@ -445,8 +461,9 @@
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                         <span style="margin-right: 3px" class="badge badge-secondary">Django</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Tensorflow</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">Keras</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">nltk</span>
-                        <span style="margin-right: 3px" class="badge badge-secondary">scikit-learn</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">matplotplib</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">openCV</span>
                         <span style="margin-right: 3px" class="badge badge-secondary">Numpy</span>
