Research interests and Referees updated

--- a/index.html
+++ b/index.html
@@ -273,12 +273,14 @@
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Research Interests</h2>
 <ul>
+    <li class="job-title">Deep Learning</li>
+     <li class="job-title">Cognitive Science</li>
                  <li class="job-title">Intelligent Software Systems</li>
                 <li class="job-title">Computer Vision and Pattern Recognition</li>
-                <li class="job-title">Cognitive Science</li>
+                <li class="job-title">Natural Languages Processing</li>
+             <li class="job-title">Human-Computer Interaction</li>
                 <li class="job-title">Information and Database Systems</li>
-                <li class="job-title">Deep Learning</li>
-                <li class="job-title">Human-Computer Interaction</li>
+
 
 
 
@@ -543,32 +545,19 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Dr. Asadollah Shahbahrami</h3>
-                        </div><!--//upper-row-->
-                        <div class="company"><a class="text-info"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
-                </div>
-                        <ul>
-                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami@guilan.ac.ir">   shahbahrami@guilan.ac.ir</a></li>
-                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shahbahrami1@gmail.com">    shahbahrami1@gmail.com</a></li>
-                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/~shahbahrami" target="_blank">https://guilan.ac.ir/~shahbahrami</a> </li>
-                        </ul>
-
-                    </div>
-                  </div>
-        <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Dr. Mahdi Aminian</h3>
+                            <h3 class="job-title">Dr. Seyed Abolghasem Mirroshandel</h3>
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
                         <ul>
-                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mahdi.aminian@guilan.ac.ir">  mahdi.aminian@guilan.ac.ir</a></li>
-                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mhd.aminian@gmail.com">  mhd.aminian@gmail.com</a></li>
-                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/~mahdi.aminian" target="_blank">https://guilan.ac.ir/~mahdi.aminian</a> </li>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mirroshandel@guilan.ac.ir">   mirroshandel@guilan.ac.ir</a></li>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mirroshandel@gmail.com ">    mirroshandel@gmail.com </a></li>
+                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/en/~mirroshandel" target="_blank">https://guilan.ac.ir/en/~mirroshandel</a> </li>
                         </ul>
+
                     </div>
                   </div>
+
 
             </section>
         </div><!--//main-body-->
