--- a/index.html
+++ b/index.html
@@ -363,6 +363,27 @@
 
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experience</h2>
+                      <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Deep Learning Engineer</h3>
+                            <div class="time">Oct.2020 - Now</div>
+                        </div><!--//upper-row-->
+                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> University of Guilan</strong></a>, Rasht, Iran
+                <br>
+                            <span style="margin-right: 3px" class="badge badge-secondary">python</span>
+                        <span style="margin-right: 3px" class="badge badge-secondary">tensorflow</span>
+                            <span style="margin-right: 3px" class="badge badge-secondary">keras</span>
+                        </div>
+                <ul><li class="text-info">
+I am analyzing a dataset consisting of different type of Persian rice and the goal of the project is to build an artificial deep neural network which can detect different kind of rice.
+                </li></ul>
+
+                    </div>
+                  </div>
+
+
+
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -557,6 +578,22 @@
 
                     </div>
                   </div>
+
+<!--            <div class="item">-->
+<!--                    <div class="meta">-->
+<!--                        <div class="upper-row">-->
+<!--                            <h3 class="job-title">Dr. Mohammad Salehi </h3>-->
+<!--                        </div>&lt;!&ndash;//upper-row&ndash;&gt;-->
+<!--                        <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan-->
+<!--                </div>-->
+<!--                        <ul>-->
+<!--                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mohammad.salehi@guilan.ac.ir">   mohammad.salehi@guilan.ac.ir</a></li>-->
+<!--                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: edu.salehi@gmail.com">    edu.salehi@gmail.com  </a></li>-->
+<!--                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/en/~mohammad.salehi" target="_blank">https://guilan.ac.ir/en/~mohammad.salehi</a> </li>-->
+<!--                        </ul>-->
+
+<!--                    </div>-->
+<!--                  </div>-->
 
 
             </section>
