--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                           <span style="margin-right: 3px" class="badge badge-secondary">JQuery</span>
  </div>
                           <ul>
+                              <li class="text-info"><strong>Thesis Grade :19.75/20 </strong></li>
                               <li>Implemented a Supervision Website for a Plate Detector
                                   System which is
                                   currently used in many universities in <strong>Guilan Province</strong> including
@@ -262,7 +263,7 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
-                    <ul><li >among <strong>160000</strong> partipants in <span class="text-info"><strong>Iranian university entrance exam</strong></span></li></ul>
+                          <ul><li >Ranked Top 5% among <strong>162731</strong> partipants in the <strong>Iranian University Entrance Exam</strong></li></ul>
                   </div></div><!--//meta-->
               </div><!--//item-->
 
