experience project added

--- a/index.html
+++ b/index.html
@@ -376,7 +376,9 @@
                         <span style="margin-right: 3px" class="badge badge-secondary">tensorflow</span>
                             <span style="margin-right: 3px" class="badge badge-secondary">keras</span>
                         </div>
-                <ul><li class="text-info">
+                <ul>                    <li class="text-info"><strong>Project : </strong>Persian Rice Categorical Detection</li>
+
+                    <li class="text-info">
 I am analyzing a dataset consisting of different type of Persian rice and the goal of the project is to build an artificial deep neural network which can detect different kind of rice.
                 </li></ul>
 
