--- a/index.html
+++ b/index.html
@@ -582,21 +582,20 @@ I am analyzing a dataset consisting of different type of Persian rice and the go
                     </div>
                   </div>
 
-<!--            <div class="item">-->
-<!--                    <div class="meta">-->
-<!--                        <div class="upper-row">-->
-<!--                            <h3 class="job-title">Dr. Mohammad Salehi </h3>-->
-<!--                        </div>&lt;!&ndash;//upper-row&ndash;&gt;-->
-<!--                        <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan-->
-<!--                </div>-->
-<!--                        <ul>-->
-<!--                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mohammad.salehi@guilan.ac.ir">   mohammad.salehi@guilan.ac.ir</a></li>-->
-<!--                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: edu.salehi@gmail.com">    edu.salehi@gmail.com  </a></li>-->
-<!--                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/en/~mohammad.salehi" target="_blank">https://guilan.ac.ir/en/~mohammad.salehi</a> </li>-->
-<!--                        </ul>-->
+            <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Dr. Seyed Mohammad Hossein Shekarian </h3>
+                        </div><!--//upper-row-->
+                        <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
+                </div>
+                        <ul>
+                        <li class="email"><i class="fas fa-envelope"></i><a href="mailto: shekarian@guilan.ac.ir">   shekarian@guilan.ac.ir</a></li>
+                        <li class="email"><i class="fas fa-globe"></i> <a href="https://guilan.ac.ir/en/~shekarian" target="_blank">https://guilan.ac.ir/en/~shekarian</a> </li>
+                        </ul>
 
-<!--                    </div>-->
-<!--                  </div>-->
+                    </div>
+                  </div>
 
 
             </section>
