linked-in updated courses updated

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                      <li class="email"><i class="fas fa-envelope"></i><a href="mailto: asal.asgari19@gmail.com"> asal.asgari19@gmail.com</a></li>
                      <li class="email"><i class="fas fa-globe"></i><a href="https://asal97.github.io/CV/" target="_blank"> https://asal97.github.io/CV/</a></li>
                      <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
-                     <li class="email"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/asal-asgari-aa66a019a/" target="_blank"> Linkedin Account</a></li>
+                     <li class="email"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/asal-asgari/" target="_blank"> linkedin.com/in/asal-asgari/</a></li>
                      <br>
                     <li class="email"><i class="fas fa-bookmark"></i>Visit my github for more information about my academic projects</li>
 
@@ -136,9 +136,12 @@
 <ul>
 
     <li class="job-title">Foundations of Computer Vision : 19.75/20</li>
-                            <li class="job-title">Principles of Database Design : 19.5/20</li>
+                            <li class="job-title">Database : 19.5/20<span class="text-info" style="font-size:x-small"> (A.K.A : Principles of Database Design) </span></li>
+
                              <li class="job-title">Internet Engineering : 20/20</li>
-                             <li class="job-title">The Theory of Formal Languages and Automata : 18.75/20</li>
+                             <li class="job-title">Theory of Languages and Machines : 18.75/20
+                                 <span class="text-info" style="font-size:x-small">(A.K.A : The Theory of Formal Languages and Automata)</span>
+                             </li>
                              <li class="job-title">Artificial Intelligence and Expert Systems : 17.15/20</li>
                              <li class="job-title">Advanced Programming : 17.20/20</li>
 
