--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <ul>                    <li class="text-info"><strong>Project : </strong>Persian Rice Categorical Detection</li>
 
                     <li class="text-info">
-I am analyzing a dataset consisting of different type of Persian rice and the goal of the project is to build an artificial deep neural network which can detect different kind of rice.
+I am analyzing a dataset consisting of different type of Persian rice and the goal of the project is to build an artificial deep neural network which can detect different kinds of rice.
                 </li></ul>
 
                     </div>
