soundcloud link corrected

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ I am analyzing a dataset consisting of different type of Persian rice and the go
                             <li><a href="https://www.instagram.com/p/BwkpAsvlNIU/" target="_blank">Group Gathering practice performance</a></li>
 
                         </ul>
-                         <div class="company"><i class="fab fa-soundcloud"></i> <span class="text-info"><a href="https://soundcloud.com/meli-plays">Listen to few of my performances on soundcloud</a> </span></div>
+                         <div class="company"><i class="fab fa-soundcloud"></i> <span class="text-info"><a href="https://soundcloud.com/meliusic" target="_blank" >Listen to few of my performances on soundcloud</a> </span></div>
 
                     </div><!--//meta-->
                      </div><!--//item-->
