end of position added

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Deep Learning Engineer</h3>
-                            <div class="time">Oct.2020 - Now</div>
+                            <div class="time">Oct.2020 - Jan.2021</div>
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> University of Guilan</strong></a>, Rasht, Iran
                 <br>
