--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ I am analyzing a dataset consisting of different type of Persian rice and the go
                         <div class="upper-row">
                             <h3 class="job-title">Dr. Seyed Abolghasem Mirroshandel</h3>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan
+                        <div class="company"><a class="text-info"><strong> Associate Professor</strong></a>, Department of Computer Engineering , University of Guilan
                 </div>
                         <ul>
                         <li class="email"><i class="fas fa-envelope"></i><a href="mailto: mirroshandel@guilan.ac.ir">   mirroshandel@guilan.ac.ir</a></li>
