--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
                 <h1 class="name">Asal Asgari</h1>
-                <h3 class="tagline">Computer Engineering Student</h3>
+                <h3 class="tagline">Applied Computer Science Student</h3>
             </div><!--//profile-container-->
 
 
@@ -52,6 +52,8 @@
                     <li>Persian <span class="lang-desc">(Native)</span></li>
                     <li>English <span class="lang-desc">(C1-Advanced)</span></li>
                     <li>German <span class="lang-desc">(B1-Intermediate)</span></li>
+                    <li>Norwegian <span class="lang-desc">(A1-Beginner)</span></li>
+
                 </ul>
             </div><!--//interests-->
 
@@ -69,14 +71,31 @@
         <div class="main-wrapper">
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-book"></i></span>Education</h2>
+<div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">M.Sc in Applied Computer Science</h3>
+                          <div class="time">Aug.2021 - 2023</div>
+                      </div><!--//upper-row-->
+                      <div class="company"><strong>UiT The Arctic University of Norway</strong> , Norway
+<br>
 
+
+
+
+</div>
+                  </div><!--//meta-->
+
+
+
+              </div>
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">B.Sc in Computer Engineering</h3>
                           <div class="time">Sep.2016 - Sep.2020</div>
                       </div><!--//upper-row-->
-                      <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
+                      <div class="company"><strong>University of Guilan</strong> , Iran
 <br>
 <ul><li class="text-info"><strong>CGPA :16.69/20 </strong></li> <li class="text-info"><strong>Last Year GPA :17.24/20 </strong></li> </ul>
 <h3 class="job-title">Bachelors Thesis Project</h3>
