--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">M.Sc in Applied Computer Science</h3>
-                          <div class="time">Aug.2021 - 2023</div>
+                          <div class="time">Aug.2021 - Present</div>
                       </div><!--//upper-row-->
                       <div class="company"><strong>UiT The Arctic University of Norway</strong> , Norway
 <br>
