--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li>Persian <span class="lang-desc">(Native)</span></li>
                     <li>English <span class="lang-desc">(C1-Advanced)</span></li>
                     <li>German <span class="lang-desc">(B1-Intermediate)</span></li>
-                    <li>Norwegian <span class="lang-desc">(A1-Beginner)</span></li>
+                    <li>Norwegian <span class="lang-desc">(A2-Beginner)</span></li>
 
                 </ul>
             </div><!--//interests-->
@@ -389,7 +389,7 @@
                       <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Deep Learning Engineer</h3>
+                            <h3 class="job-title">Research Assistant</h3>
                             <div class="time">Oct.2020 - Jan.2021</div>
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> University of Guilan</strong></a>, Rasht, Iran
@@ -400,9 +400,11 @@
                         </div>
                 <ul>                    <li class="text-info"><strong>Project : </strong>Persian Rice Categorical Detection</li>
 
+
                     <li class="text-info">
-I am analyzing a dataset consisting of different type of Persian rice and the goal of the project is to build an artificial deep neural network which can detect different kinds of rice.
-                </li></ul>
+
+Analyzing a dataset consisting of different types of Persian rice and the goal of the project was to build an artificial deep neural network which can detect different kinds of rice</li></ul>
+
 
                     </div>
                   </div>
